# passage-python

./: .gitignore  BUILD.md  CHANGELOG.md  Dockerfile  LICENSE.txt  README.md  generate.sh  openapi.json  pyproject.toml  ruff.toml  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml  on-pull-request.yml  release.yml
docs/: AuthMethods.md  CreateMagicLinkRequest.md  FontFamily.md  GoogleUserSocialConnection.md  LayoutConfig.md  Layouts.md  ListPaginatedUsersItem.md  ListPaginatedUsersResponse.md  MagicLink.md  MagicLinkResponse.md  MagicLinkType.md  Model403Error.md  Model404Error.md  Model500Error.md  PaginatedLinks.md  SocialConnectionType.md  Technologies.md  ThemeType.md  TokensApi.md  UserEventAction.md  UserEventStatus.md  UserMetadataFieldType.md  UserResponse.md  UserSocialConnections.md  UsersApi.md  WebAuthnDevices.md  WebAuthnIcons.md  WebAuthnType.md
docs/passageidentity/: Authentication.md  Client.md  Users.md
openapi_client/: __init__.py  api_client.py  exceptions.py  rest.py
openapi_client/api/: magic_links_api.py  users_api.py
openapi_client/models/: create_user_request.py  element_customization.py  layout_config.py  magic_link.py  magic_link_response.py  model400_error.py  passkeys_auth_method.py  technologies.py
passage/: errors.py  helper.py  passage.py
passageidentity/: __init__.py  auth.py  errors.py  helper.py  passage.py  requests.py  user.py
passageidentity/models/: __init__.py  create_user_args.py  magic_link_args.py  magic_link_options.py  passage_user.py  update_magic_link_auth_method.py  update_otp_auth_method.py  update_passkey_auth_method.py  update_user_args.py
passageidentity/openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
passageidentity/openapi_client/api/: __init__.py  apps_api.py  magic_links_api.py  tokens_api.py  user_devices_api.py  users_api.py
passageidentity/openapi_client/models/: __init__.py  app_info.py  app_response.py  apple_user_social_connection.py  auth_methods.py  create_magic_link_request.py  create_user_args.py  create_user_request.py  element_customization.py  font_family.py  layout_config.py  (+40 more)
passageidentity/passage_identity.egg-info/: PKG-INFO  SOURCES.txt
tests/: auth_test.py  authenticate_test.py  errors_test.py  user_test.py
(+26 files in other folders)
